Fixed menu on iphone overlaps with title cover.

--- a/less/bootstrap/navbar.less
+++ b/less/bootstrap/navbar.less
@@ -360,7 +360,10 @@
     z-index: 6;
     border-radius: none!important;
     @media @mobile {
-        background-color: rgba(0,0,0,.8);
+        background-color: rgba(0,0,0,.7);
+    }
+    @media @smartphone {
+        background-color: rgba(0,0,0,.7);
     }
     &-active {
         background-color: #000;
