--- a/style.css
+++ b/style.css
@@ -4474,7 +4474,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 @media only screen and (min-device-width : 320px) and (max-device-width : 479px) {
   .navbar-default {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+}
+@media only screen and (min-width: 480px) and (max-width: 766px) {
+  .navbar-default {
+    background-color: rgba(0, 0, 0, 0.7);
   }
 }
 .navbar-default-active {
